--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="">
   <title>Custom hooks</title>
-  <!-- Google fonts [Lato] -->
+  <!-- Google fonts [Roboto] -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <!-- Font awesome kit -->
   <script src="https://kit.fontawesome.com/5a1527845b.js" crossorigin="anonymous"></script>
 </head>
