added meta desc, added readme's text, simple changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     href="https://img.icons8.com/external-tal-revivo-color-tal-revivo/96/external-launchpad-is-a-web-application-and-website-that-allows-users-to-develop-and-maintain-software-logo-color-tal-revivo.png"
     type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="">
+  <meta name="description"
+    content="Explore a treasure trove of custom React hooks on our website, each accompanied by detailed explanations, live code examples, and input/output demonstrations. Copy and download the code effortlessly, and stay tuned as we regularly add new hooks. Enhance your React projects with our comprehensive collection. Download all hooks as a convenient RAR file for seamless integration.">
   <title>Custom hooks</title>
   <!-- Google fonts [Roboto] -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
