--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <!-- Font awesome kit -->
   <script src="https://kit.fontawesome.com/5a1527845b.js" crossorigin="anonymous"></script>
+  <!-- Preloaded content -->
+  <link rel="preload" href="./src/Assets/introduction-image.webp" as="image" />
 </head>
 
 <body>
