testing viewport's content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     href="https://img.icons8.com/external-tal-revivo-color-tal-revivo/96/external-launchpad-is-a-web-application-and-website-that-allows-users-to-develop-and-maintain-software-logo-color-tal-revivo.png"
     type="image/x-icon">
   <meta name="author" content="Moamal Alaa Kareem">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2, viewport-fit=cover" />
   <meta name="description" content="Explore a treasure trove of custom React hooks on our website, 
   each accompanied by detailed explanations, live code examples, 
   and input/output demonstrations. Copy and download the code effortlessly, 
