--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   Download all hooks as a convenient RAR file for seamless integration.">
   <meta name="keywords"
     content="custom hooks, react custom hooks, custom hooks example, react custom hooks examples, custom hooks in react js, how to create custom hooks in react, usetoggle, usefetch, usedebounce, useform, use local storage">
-    <meta name="theme-color" content="#181818">
+  <meta name="theme-color" content="#181818">
   <!-- Preloaded content -->
-  <link rel="preload" href="./src/Assets/Images/introduction-image.webp" as="image" />
+  <!-- <link rel="preload" href="./src/Assets/Images/introduction-image.webp" as="image" /> -->
 </head>
 
 <body>
