stopped my serviceWorker

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     content="custom hooks, react custom hooks, custom hooks example, react custom hooks examples, custom hooks in react js, how to create custom hooks in react, usetoggle, usefetch, usedebounce, useform, use local storage">
   <meta name="theme-color" content="#181818">
   <!-- Preloaded content -->
-  <!-- <link rel="preload" href="./src/Assets/Images/introduction-image.webp" as="image" /> -->
+  <link rel="preload" href="./src/Assets/Images/introduction-image.webp" as="image" />
 </head>
 
 <body>
