updated start_url path in manifest file

--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
 <head>
   <title>Custom hooks</title>
   <meta charset="UTF-8" />
-  <link rel="shortcut icon"
-    href="https://img.icons8.com/external-tal-revivo-color-tal-revivo/96/external-launchpad-is-a-web-application-and-website-that-allows-users-to-develop-and-maintain-software-logo-color-tal-revivo.png"
-    type="image/x-icon">
-  <meta name="author" content="Moamal Alaa Kareem">
   <meta name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2, viewport-fit=cover" />
+  <meta name="author" content="Moamal Alaa Kareem">
   <meta name="description" content="Explore a treasure trove of custom React hooks on our website, 
   each accompanied by detailed explanations, live code examples, 
   and input/output demonstrations. Copy and download the code effortlessly, 
@@ -18,6 +15,10 @@
   <meta name="keywords"
     content="custom hooks, react custom hooks, custom hooks example, react custom hooks examples, custom hooks in react js, how to create custom hooks in react, usetoggle, usefetch, usedebounce, useform, use local storage">
   <meta name="theme-color" content="#181818">
+  <!-- Favicon -->
+  <link rel="shortcut icon"
+    href="https://img.icons8.com/external-tal-revivo-color-tal-revivo/96/external-launchpad-is-a-web-application-and-website-that-allows-users-to-develop-and-maintain-software-logo-color-tal-revivo.png"
+    type="image/x-icon">
   <!-- Preloaded content -->
   <link rel="preload" href="./src/Assets/Images/introduction-image.webp" as="image" />
 </head>
