testing pwa without vite plugin

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <link rel="shortcut icon"
     href="https://img.icons8.com/external-tal-revivo-color-tal-revivo/96/external-launchpad-is-a-web-application-and-website-that-allows-users-to-develop-and-maintain-software-logo-color-tal-revivo.png"
     type="image/x-icon">
+  <!-- Manifest PWA -->
+  <link rel="manifest" href="./manifest.json">
   <!-- Preloaded content -->
   <link rel="preload" href="./src/Assets/Images/introduction-image.webp" as="image" />
 </head>
