--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2, viewport-fit=cover" />
   <meta name="author" content="Moamal Alaa Kareem">
-  <meta name="description" content="Explore a treasure trove of custom React hooks on our website, 
-  each accompanied by detailed explanations, live code examples, 
-  and input/output demonstrations. Copy and download the code effortlessly, 
-  and stay tuned as we regularly add new hooks. Enhance your React projects with our comprehensive collection. 
-  Download all hooks as a convenient RAR file for seamless integration.">
+  <meta name="description"
+    content="Explore a treasure trove of custom React hooks on our website, each accompanied by detailed explanations, live code examples, and input/output demonstrations. Copy and download the code effortlessly, and stay tuned as we regularly add new hooks. Enhance your React projects with our comprehensive collection. Download all hooks as a convenient RAR file for seamless integration.">
   <meta name="keywords"
     content="custom hooks, react custom hooks, custom hooks example, react custom hooks examples, custom hooks in react js, how to create custom hooks in react, usetoggle, usefetch, usedebounce, useform, use local storage">
   <meta name="theme-color" content="#181818">
