perf: optimize favicon image

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <title>Custom hooks</title>
+  <title>Custom Hooks</title>
   <meta charset="UTF-8" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2, viewport-fit=cover" />
@@ -13,9 +13,7 @@
     content="custom hooks, react custom hooks, custom hooks example, react custom hooks examples, custom hooks in react js, how to create custom hooks in react, usetoggle, usefetch, usedebounce, useform, use local storage">
   <meta name="theme-color" content="#181818">
   <!-- Favicon -->
-  <link rel="shortcut icon"
-    href="https://img.icons8.com/external-tal-revivo-color-tal-revivo/96/external-launchpad-is-a-web-application-and-website-that-allows-users-to-develop-and-maintain-software-logo-color-tal-revivo.png"
-    type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.webp" type="image/webp">
   <!-- Manifest PWA -->
   <link rel="manifest" href="./manifest.json">
   <!-- Preloaded content -->
