remove: trailing slash from html tags

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <title>Custom Hooks</title>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport"
-    content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2, viewport-fit=cover" />
+    content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2, viewport-fit=cover">
   <meta name="author" content="Moamal Alaa Kareem">
   <meta name="description"
     content="Explore a treasure trove of custom React hooks on our website, each accompanied by detailed explanations, live code examples, and input/output demonstrations. Copy and download the code effortlessly, and stay tuned as we regularly add new hooks. Enhance your React projects with our comprehensive collection. Download all hooks as a convenient RAR file for seamless integration.">
@@ -17,7 +17,7 @@
   <!-- Manifest PWA -->
   <link rel="manifest" href="./manifest.json">
   <!-- Preloaded content -->
-  <link rel="preload" href="./src/Assets/Images/introduction-image.webp" as="image" />
+  <link rel="preload" href="./src/Assets/Images/introduction-image.webp" as="image">
 </head>
 
 <body>
